--- a/index.html
+++ b/index.html
@@ -129,46 +129,10 @@
               <span class="card-title">Node LIRI Bot</span>
             </div>
             <div class="card-content">
-              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the app returns information from one of 3 api's based on the request.</p>
+              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the app returns information from one of 3 api's based on the request.</p><br>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://github.com/phil4lif/liri-node-app" class="black-text">Github Repo</a>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/images/connollylogo.png" alt="connolly electric logo">
-              <span class="card-title">Connolly Electric</span>
-            </div>
-            <div class="card-content">
-              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p><br><br>
-            </div>
-            <div class="card-action">
-              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
-                Mechanical</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/images/giphy_logo_square_social.png" alt="giphy logo">
-              <span class="card-title">Animal Gifs</span>
-            </div>
-            <div class="card-content">
-              <p>A simple app that allows a user to query the giphy api, to display results, start and stop the
-                animation with a click, and save favorites. I built this with html, css, javascript, jquery, ajax, and
-                used local storage.</p>
-            </div>
-            <div class="card-action">
-              <a href="https://phil4lif.github.io/giftastic/" target="_blank" class="black-text">Deployment</a>
-              <a class="black-text" target="_blank" href="https://github.com/phil4lif/giftastic">Github Repo</a>
 
             </div>
           </div>
@@ -194,6 +158,43 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
+              <img src="assets/images/giphy_logo_square_social.png" alt="giphy logo">
+              <span class="card-title">Animal Gifs</span>
+            </div>
+            <div class="card-content">
+              <p>A simple app that allows a user to query the giphy api, to display results, start and stop the
+                animation with a click, and save favorites. I built this with html, css, javascript, jquery, ajax, and
+                used local storage.</p><br><br>
+            </div>
+            <div class="card-action">
+              <a href="https://phil4lif.github.io/giftastic/" target="_blank" class="black-text">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/phil4lif/giftastic">Github Repo</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/connollylogo.png" alt="connolly electric logo">
+              <span class="card-title">Connolly Electric</span>
+            </div>
+            <div class="card-content">
+              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p><br><br>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
+                Mechanical</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
               <img src="assets/images/koya.jpg" alt="koya album cover">
               <span class="card-title">Koya Music</span>
             </div>
@@ -204,7 +205,7 @@
               <a target="_blank" href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div>
