--- a/index.html
+++ b/index.html
@@ -112,6 +112,40 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
+              <img src="assets/images/large-crowd-people.png" alt="Crowd Picture">
+              <span class="card-title">Friend Finder app</span>
+            </div>
+            <div class="card-content">
+              <p>This app takes a survey of a user to match them with another user based on similarities of responses. It was made with node and express.</p><br>
+            </div>
+            <div class="card-action">
+              <a class="black-text" target="_blank" href="https://find-a-friend-bootcamp.herokuapp.com/">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/phil4lif/friend-finder">Github Repo</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/liriss.png" alt="App Screenshot">
+              <span class="card-title">Node LIRI Bot</span>
+            </div>
+            <div class="card-content">
+              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the
+                app returns information from one of 3 api's based on the request.</p><br>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="https://github.com/phil4lif/liri-node-app" class="black-text">Github Repo</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
               <img src="assets/images/trainportpic.jpg" alt="Train Picture">
               <span class="card-title">Train Tracker</span>
             </div>
@@ -225,6 +259,7 @@
     $(document).ready(function () {
       $('.parallax').parallax();
       $('.sidenav').sidenav();
+      $('.scrollspy').scrollSpy();
     });
 
   </script>
